tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_97.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := ((((1223 DIV z) + (+ 2)) DIV (+ (+ 1))) + (- ((200 DIV 0) - (200 + y))));
               p := ((((0 MOD 2) MOD (2 * 1)) DIV ((200 * z) * (- 200))) > (((y + 0) DIV (+ x)) DIV (- (2 MOD 200))));
               q := ((((y + y) * (+ 1223)) + ((z MOD 1223) DIV (1 - 0))) >= (((1223 + 200) * (- x)) DIV ((z DIV z) - (- 1223))));
               y := ((((- 2) - (1 DIV 0)) - ((1 + 2) DIV (y - 2))) DIV (+ ((- 2) DIV (1223 - 1))));
               x := ((((2 - 2) * (- 1223)) * ((1223 * 1) MOD (+ z))) * ((- (+ 1)) MOD (- (y * 0))));
  (* error *)  z := ((+ ((+ q) MOD (- 1))) DIV (((y MOD 1223) + (200 - 1)) DIV (- (2 MOD 0))));
               p := ((((- x) DIV (x DIV x)) + (- (+ 0))) = ((- (1223 DIV 0)) * ((1223 - 2) * (1223 DIV 200))));
               x := (((- (0 - 1)) * ((+ 1) + (2 - z))) - (((- z) MOD (+ 200)) * ((- 0) MOD (200 * x))));
               p := ((+ (- (+ 1223))) >= (+ (+ (z DIV 2))));
               q := (((- (0 - 200)) MOD ((- y) DIV (z * 1))) <= ((+ (1 DIV y)) MOD (+ (2 + x))))
END Test16.